The plus button should look like its not part of the tab and should have spacing, and should display without the highlighting BG - FIXED

--- a/src/components/testTabs/TestTabs.css
+++ b/src/components/testTabs/TestTabs.css
@@ -90,3 +90,13 @@
     float: left;
     height: 102%;
   }
+
+  span.tab-separator {
+    margin-right: 5px;
+}
+
+a.active.custom-add-new-test.nav-link  {
+  background-color: rgb(159, 155, 155);
+  color: white;
+  padding: 8px 13px;
+}
